# nl-os

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.specs/: CONTEXT.md
.specs/adr/: 001-four-layer-pipeline.md  002-permission-model.md  003-nl-c-syntax.md  004-model-selection.md  005-kernel-integration.md  006-dependency-strategy.md
.specs/nl-os/: CHANGE.md  DESIGN.md  REQUIREMENT.md
cmake/: toolchain-arm64.cmake
docs/: BUILD.md  我的需求.md
etc/: nl-perm.service  nlsh.conf  perm_rules.conf
models/: download_model.sh
models/benchmarks/: nl-commands-zh.json
src/: CMakeLists.txt
src/libnlc/: few_shot.c  few_shot.h  intent_extract.c  intent_extract.h  json_helper.c  json_helper.h  model_loader.c  model_loader.h  nlc_api.c  nlc_api.h  path_safety.c  path_safety.h  rule_engine.c  rule_engine.h  rules_db.h  template_fill.c  template_fill.h  templates_db.h
src/nl-perm/: audit_log.c  audit_log.h  ipc_server.c  ipc_server.h  main.c  perm_engine.c  perm_engine.h  seccomp_filter.c  seccomp_filter.h
src/nl-run/: main.c  script_parser.c  script_parser.h
src/nlsh/: dispatch.c  dispatch.h  history.c  history.h  ipc_client.c  ipc_client.h  line_edit.c  line_edit.h  main.c
tests/: CMakeLists.txt
tests/model/: schema_validation_test.c
tests/unit/: intent_extract_test.c  json_helper_test.c  model_loader_test.c  nlc_api_test.c  path_safety_test.c  perm_engine_test.c  rule_engine_test.c  template_fill_test.c
